--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: rfr_cookbook
-description: Redmond Fire and Rescue Cookbook
+description: Redmond Fire & Rescue Cookbook
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -29,13 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  syncfusion_flutter_pdfviewer: any
   material_floating_search_bar: ^0.2.6
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  syncfusion_flutter_pdfviewer: any
 
 dev_dependencies:
   flutter_test:
