--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  syncfusion_flutter_pdfviewer: any
+  syncfusion_flutter_pdfviewer: 19.3.46-beta
   material_floating_search_bar: ^0.2.6
 
 
