--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
-    - assets/images/
+    - lib/assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -91,7 +90,7 @@ flutter:
   fonts:
     - family: Muli
       fonts:
-        - asset: assets/fonts/Muli-Light.ttf
+        - asset: lib/assets/fonts/Muli-Light.ttf
           weight: 300
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
