--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^1.8.0
   syncfusion_flutter_pdfviewer: 19.3.47-beta
   material_floating_search_bar: ^0.2.6
 
