--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^1.8.0
   firebase_storage: ^10.0.6
+  firebase_auth: ^3.1.4
+
   syncfusion_flutter_pdfviewer: 19.3.47-beta
   material_floating_search_bar: ^0.2.6
 
