--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
 
   crypto: ^3.0.1
   email_validator: ^2.0.1
+  flutter_dialogs: ^2.1.1
   file_picker: ^4.2.1
   path_provider: ^2.0.6
   syncfusion_flutter_pdfviewer: 19.3.47-beta
