--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   flutter_dialogs: ^2.1.1
   file_picker: ^4.2.1
   path_provider: ^2.0.6
-  syncfusion_flutter_pdfviewer: 19.3.47-beta
+  syncfusion_flutter_pdfviewer: ^19.3.54-beta
   material_floating_search_bar: ^0.2.6
+  flutter_speed_dial: ^5.0.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
