--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^19.3.54-beta
   material_floating_search_bar: ^0.2.6
   flutter_speed_dial: ^5.0.0+1
+  wiredash: ^0.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
