--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,7 +71,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/assets/
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -101,7 +101,7 @@ flutter:
   fonts:
     - family: Muli
       fonts:
-        - asset: lib/assets/fonts/Muli-Light.ttf
+        - asset: assets/fonts/Muli-Light.ttf
           weight: 300
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
