--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   material_floating_search_bar: ^0.2.6
   flutter_speed_dial: ^5.0.0+1
   wiredash: ^0.6.0
+  flutter_easyloading: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
